--- a/test/fullscale_tests/test_BCs/temperature.yaml
+++ b/test/fullscale_tests/test_BCs/temperature.yaml
@@ -31,22 +31,20 @@ PeriLab:
       Horizon: 2.1
   Boundary Conditions:
     BC_1:
-      Type: "Displacements"
+      Type: "Temperature"
       Node Set: "Node Set 1"
-      Coordinate: "x"
-      Value: "0.1"
+      Value: "300"
     BC_2:
-      Type: "Displacements"
+      Type: "Temperature"
       Node Set: "Node Set 2"
-      Coordinate: "y"
-      Value: "0.1*t"
+      Value: "1*10^7*t"
     BC_3:
-      Type: "Displacements"
+      Type: "Temperature"
       Node Set: "Node Set 3"
-      Coordinate: "z"
-      Value: "if t>0.00001 0 else 0.1 end"
+      Value: "if t>0.00001 0 else 600 end"
   Solver:
-    Solve For Displacement: True
+    Material Models: True
+    Thermal Models: True
     Initial Time: 0.0
     Final Time: 5.0e-5
     Verlet:
@@ -54,7 +52,8 @@ PeriLab:
       Safety Factor: 1.0
   Outputs:
     Output1:
-      Output Filename: "displacements"
+      Output Filename: "temperature"
       Output Frequency: 1
       Output Variables:
         Displacements: True
+        Temperature: True
