--- a/test/fullscale_tests/test_thermal_expansion/thermal_expansion_PD_Solid.yaml
+++ b/test/fullscale_tests/test_thermal_expansion/thermal_expansion_PD_Solid.yaml
@@ -55,7 +55,7 @@ PeriLab:
       Numerical Damping: 0e-00
   Outputs:
     Output1:
-      Output Filename: "thermal_PD_Solid"
+      Output Filename: "thermal_expansion_PD_Solid"
       Output Type: Exodus
       Number of Output Steps: 10
       Output Variables:
