--- a/test/fullscale_tests/test_thermal_flow/thermal_flow_BC.yaml
+++ b/test/fullscale_tests/test_thermal_flow/thermal_flow_BC.yaml
@@ -29,16 +29,16 @@ PeriLab:
       Block Names: "block_1"
       Material Model: "Test"
       Thermal Model: "Thermal test"
-      Density: 1.24e-03
+      Density: 1.24e03
       Horizon: 1.1005e-3
-      Heat Capacity: 1800000000.0
+      Specific Heat Capacity: 18000.0
     block_2:
       Block Names: "block_2"
       Material Model: "Test"
       Thermal Model: "Thermal test"
-      Density: 1.24e-03
+      Density: 1.24e03
       Horizon: 1.1005e-3
-      Heat Capacity: 1800000000.0
+      Specific Heat Capacity: 18000.0
   Boundary Conditions:
     BC_1:
       Type: "Temperature"
