--- a/test/fullscale_tests/test_Correspondence_Elastic_with_zero_E_control/correspondence_strain_pstress_zc_xx.yaml
+++ b/test/fullscale_tests/test_Correspondence_Elastic_with_zero_E_control/correspondence_strain_pstress_zc_xx.yaml
@@ -12,13 +12,13 @@ PeriLab:
         Material Models: 
             Mat_1: 
                 Material Model: "Correspondence Elastic"
-                Symmetry: "isottropic plane strain"
                 Bulk Modulus: 2.5e+3
+                Symmetry: "isotropic plane stress"
                 Shear Modulus: 1.15e3
                 Zero Energy Control: "Global"
             Mat_2: 
                 Material Model: "Correspondence Elastic"
-                Symmetry: "isottropic plane strain"
+                Symmetry: "isotropic plane stress"
                 Bulk Modulus: 3.5e+3
                 Shear Modulus: 2.15e3
                 Zero Energy Control: "Global"
@@ -38,7 +38,7 @@ PeriLab:
             Type: "Displacements"
             Node Set: "Node Set 1"
             Coordinate: "x"
-            Value: "0.1*x"
+            Value: "0.0*x"
         BC_2: 
             Type: "Displacements"
             Node Set: "Node Set 1"
@@ -53,7 +53,7 @@ PeriLab:
             Safety Factor: 1.0
     Outputs: 
         Output1:
-            Output Filename: "correspondence_strain_pstrain_yy_hg"
+            Output Filename: "correspondence_strain_pstress_zc_xx"
             Output Frequency: 1
             Output Variables: 
                 Displacements: True
