--- a/test/fullscale_tests/test_Correspondence_Elastic_with_zero_E_control/correspondence_strain_pstrain_zc_yy.yaml
+++ b/test/fullscale_tests/test_Correspondence_Elastic_with_zero_E_control/correspondence_strain_pstrain_zc_yy.yaml
@@ -12,13 +12,13 @@ PeriLab:
         Material Models: 
             Mat_1: 
                 Material Model: "Correspondence Elastic"
-                Symmetry: "isottropic plane stress"
+                Symmetry: "isotropic plane strain"
                 Bulk Modulus: 2.5e+3
                 Shear Modulus: 1.15e3
                 Zero Energy Control: "Global"
             Mat_2: 
                 Material Model: "Correspondence Elastic"
-                Symmetry: "isottropic plane stress"
+                Symmetry: "isotropic plane strain"
                 Bulk Modulus: 3.5e+3
                 Shear Modulus: 2.15e3
                 Zero Energy Control: "Global"
@@ -53,7 +53,7 @@ PeriLab:
             Safety Factor: 1.0
     Outputs: 
         Output1:
-            Output Filename: "correspondence_strain_pstress_xx_hg"
+            Output Filename: "correspondence_strain_pstrain_zc_yy"
             Output Frequency: 1
             Output Variables: 
                 Displacements: True
