--- a/examples/ENFmodel/ENFmodel.yaml
+++ b/examples/ENFmodel/ENFmodel.yaml
@@ -126,7 +126,7 @@ PeriLab:
         Number of Blocks: 3
         Only Tension: false
         Plane Stress: true
-        Stabilization Type: Global Stiffness
+        Zero Energy Mode Control: Global
         Thickness: 10.0
     Material Models:
       Aluminium:
@@ -136,7 +136,7 @@ PeriLab:
         Material Model: Correspondence Elastic
         Plane Stress: true
         Poisson's Ratio: 0.33
-        Stabilization Type: Global Stiffness
+        Zero Energy Mode Control: Global
         Tension Separation: true
         Thermal Bond Based: true
         Thickness: 1.0
